--- a/style.css
+++ b/style.css
@@ -667,7 +667,7 @@ outline: 1px solid #EA5546;
 .other-services {
 	border: 1px solid #EA5546;
 	width: 96%;
-	margin-top: 30px;
+	margin: 30px auto 0;
 }                           
 
 .other-services-tab {
@@ -792,7 +792,7 @@ outline: 1px solid #EA5546;
 
 			                    /*FORM*/
 .question-form {
-	width: 100%;
+	width: 98%;
 	min-height: 120px;
 	display: flex;
 	align-items: top;
@@ -801,7 +801,7 @@ outline: 1px solid #EA5546;
 	justify-content: space-around;
 	padding-top: 50px;
 	position: relative;
-	margin-top: 40px;
+	margin: 40px auto 0;
 }
 
 .question-form input {
